--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "build": "tsc -p .",
     "build:watch": "tsc -w -p .",
@@ -14,6 +15,7 @@
   "dependencies": {
     "@slack/bolt": "^3.17.1",
     "dotenv": "^16.4.1",
+    "node-fetch": "^3.3.2",
     "openai": "^4.26.0"
   },
   "devDependencies": {
